Meta3/y.output
Terminals which are not used

   RESERVED


State 130 conflicts: 2 shift/reduce
State 131 conflicts: 2 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: ProgHeading ';' ProgBlock '.'

    2 ProgHeading: PROGRAM IDToken '(' OUTPUT ')'

    3 ProgBlock: VarPart FuncPart StatPart

    4 VarPart: VAR VarDeclaration ';' VarDeclarationSemic_Repeat
    5        | /* empty */

    6 VarDeclarationSemic_Repeat: VarDeclaration ';' VarDeclarationSemic_Repeat
    7                           | /* empty */

    8 VarDeclaration: IDList ':' IDToken

    9 IDList: IDToken CommaID_Repeat

   10 CommaID_Repeat: ',' IDToken CommaID_Repeat
   11               | /* empty */

   12 FuncPart: FuncDeclaration_Repeat

   13 FuncDeclaration_Repeat: FuncDeclaration ';' FuncDeclaration_Repeat
   14                       | /* empty */

   15 FuncDeclaration: FuncHeading ';' FORWARD
   16                | FuncIdent ';' FuncBlock
   17                | FuncHeading ';' FuncBlock

   18 FuncHeading: FUNCTION IDToken FormalParamList ':' IDToken
   19            | FUNCTION IDToken ':' IDToken

   20 FuncIdent: FUNCTION IDToken

   21 FormalParamList: '(' FormalParams SemicFormalParams_Repeat ')'

   22 SemicFormalParams_Repeat: ';' FormalParams SemicFormalParams_Repeat
   23                         | /* empty */

   24 FormalParams: VAR IDList ':' IDToken
   25             | IDList ':' IDToken

   26 FuncBlock: VarPart StatPart

   27 StatPart: CompStat

   28 CompStat: BEGIN_token StatList END

   29 StatList: Stat SemicStat_Repeat

   30 SemicStat_Repeat: ';' Stat SemicStat_Repeat
   31                 | /* empty */

   32 Stat: CompStat
   33     | IF Expr THEN Stat ELSE Stat
   34     | IF Expr THEN Stat
   35     | WHILE Expr DO Stat
   36     | REPEAT StatList UNTIL Expr
   37     | VAL '(' PARAMSTR '(' Expr ')' ',' IDToken ')'
   38     | IDAssignExpr_Optional
   39     | WRITELN WritelnPList_Optional

   40 IDAssignExpr_Optional: IDToken ASSIGN Expr
   41                      | /* empty */

   42 WritelnPList_Optional: WritelnPList
   43                      | /* empty */

   44 WritelnPList: '(' Expr CommaExprString_Repeat ')'
   45             | '(' StringToken CommaExprString_Repeat ')'

   46 CommaExprString_Repeat: ',' Expr CommaExprString_Repeat
   47                       | ',' StringToken CommaExprString_Repeat
   48                       | /* empty */

   49 Expr: SimpleExpr
   50     | SimpleExpr OP2Token SimpleExpr

   51 SimpleExpr: SimpleExpr OP3Token Term
   52           | SimpleExpr ORToken Term
   53           | UnaryOP3Token Term
   54           | Term

   55 Term: Term OP4Token Term
   56     | Term ANDToken Term
   57     | Factor

   58 Factor: UnaryNOTToken Factor
   59       | '(' Expr ')'
   60       | IntLitToken
   61       | RealLitToken
   62       | IDCallToken ParamList
   63       | IDToken

   64 ParamList: '(' Expr CommaExpr_Repeat ')'

   65 CommaExpr_Repeat: ',' Expr CommaExpr_Repeat
   66                 | /* empty */

   67 IDToken: ID

   68 StringToken: STRING

   69 RealLitToken: REALLIT

   70 IntLitToken: INTLIT

   71 IDCallToken: ID

   72 ANDToken: AND

   73 OP4Token: OP4

   74 ORToken: OR

   75 OP3Token: OP3

   76 OP2Token: OP2

   77 UnaryNOTToken: NOT

   78 UnaryOP3Token: OP3


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 21 37 44 45 59 64
')' (41) 2 21 37 44 45 59 64
',' (44) 10 37 46 47 65
'.' (46) 1
':' (58) 8 18 19 24 25
';' (59) 1 4 6 13 15 16 17 22 30
error (256)
ASSIGN (258) 40
BEGIN_token (259) 28
DO (260) 35
ELSE (261) 33
END (262) 28
FORWARD (263) 15
FUNCTION (264) 18 19 20
IF (265) 33 34
OUTPUT (266) 2
PARAMSTR (267) 37
PROGRAM (268) 2
REPEAT (269) 36
THEN (270) 33 34
UNTIL (271) 36
VAL (272) 37
VAR (273) 4 24
WHILE (274) 35
WRITELN (275) 39
RESERVED (276)
ID (277) 67 71
STRING (278) 68
REALLIT (279) 69
INTLIT (280) 70
OP2 (281) 76
OR (282) 74
OP3 (283) 75 78
AND (284) 72
OP4 (285) 73
NOT (286) 77


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Prog (39)
    on left: 1, on right: 0
ProgHeading (40)
    on left: 2, on right: 1
ProgBlock (41)
    on left: 3, on right: 1
VarPart (42)
    on left: 4 5, on right: 3 26
VarDeclarationSemic_Repeat (43)
    on left: 6 7, on right: 4 6
VarDeclaration (44)
    on left: 8, on right: 4 6
IDList (45)
    on left: 9, on right: 8 24 25
CommaID_Repeat (46)
    on left: 10 11, on right: 9 10
FuncPart (47)
    on left: 12, on right: 3
FuncDeclaration_Repeat (48)
    on left: 13 14, on right: 12 13
FuncDeclaration (49)
    on left: 15 16 17, on right: 13
FuncHeading (50)
    on left: 18 19, on right: 15 17
FuncIdent (51)
    on left: 20, on right: 16
FormalParamList (52)
    on left: 21, on right: 18
SemicFormalParams_Repeat (53)
    on left: 22 23, on right: 21 22
FormalParams (54)
    on left: 24 25, on right: 21 22
FuncBlock (55)
    on left: 26, on right: 16 17
StatPart (56)
    on left: 27, on right: 3 26
CompStat (57)
    on left: 28, on right: 27 32
StatList (58)
    on left: 29, on right: 28 36
SemicStat_Repeat (59)
    on left: 30 31, on right: 29 30
Stat (60)
    on left: 32 33 34 35 36 37 38 39, on right: 29 30 33 34 35
IDAssignExpr_Optional (61)
    on left: 40 41, on right: 38
WritelnPList_Optional (62)
    on left: 42 43, on right: 39
WritelnPList (63)
    on left: 44 45, on right: 42
CommaExprString_Repeat (64)
    on left: 46 47 48, on right: 44 45 46 47
Expr (65)
    on left: 49 50, on right: 33 34 35 36 37 40 44 46 59 64 65
SimpleExpr (66)
    on left: 51 52 53 54, on right: 49 50 51 52
Term (67)
    on left: 55 56 57, on right: 51 52 53 54 55 56
Factor (68)
    on left: 58 59 60 61 62 63, on right: 57 58
ParamList (69)
    on left: 64, on right: 62
CommaExpr_Repeat (70)
    on left: 65 66, on right: 64 65
IDToken (71)
    on left: 67, on right: 2 8 9 10 18 19 20 24 25 37 40 63
StringToken (72)
    on left: 68, on right: 45 47
RealLitToken (73)
    on left: 69, on right: 61
IntLitToken (74)
    on left: 70, on right: 60
IDCallToken (75)
    on left: 71, on right: 62
ANDToken (76)
    on left: 72, on right: 56
OP4Token (77)
    on left: 73, on right: 55
ORToken (78)
    on left: 74, on right: 52
OP3Token (79)
    on left: 75, on right: 51
OP2Token (80)
    on left: 76, on right: 50
UnaryNOTToken (81)
    on left: 77, on right: 58
UnaryOP3Token (82)
    on left: 78, on right: 53


state 0

    0 $accept: . Prog $end

    PROGRAM  shift, and go to state 1

    Prog         go to state 2
    ProgHeading  go to state 3


state 1

    2 ProgHeading: PROGRAM . IDToken '(' OUTPUT ')'

    ID  shift, and go to state 4

    IDToken  go to state 5


state 2

    0 $accept: Prog . $end

    $end  shift, and go to state 6


state 3

    1 Prog: ProgHeading . ';' ProgBlock '.'

    ';'  shift, and go to state 7


state 4

   67 IDToken: ID .

    $default  reduce using rule 67 (IDToken)


state 5

    2 ProgHeading: PROGRAM IDToken . '(' OUTPUT ')'

    '('  shift, and go to state 8


state 6

    0 $accept: Prog $end .

    $default  accept


state 7

    1 Prog: ProgHeading ';' . ProgBlock '.'

    VAR  shift, and go to state 9

    $default  reduce using rule 5 (VarPart)

    ProgBlock  go to state 10
    VarPart    go to state 11


state 8

    2 ProgHeading: PROGRAM IDToken '(' . OUTPUT ')'

    OUTPUT  shift, and go to state 12


state 9

    4 VarPart: VAR . VarDeclaration ';' VarDeclarationSemic_Repeat

    ID  shift, and go to state 4

    VarDeclaration  go to state 13
    IDList          go to state 14
    IDToken         go to state 15


state 10

    1 Prog: ProgHeading ';' ProgBlock . '.'

    '.'  shift, and go to state 16


state 11

    3 ProgBlock: VarPart . FuncPart StatPart

    FUNCTION  shift, and go to state 17

    $default  reduce using rule 14 (FuncDeclaration_Repeat)

    FuncPart                go to state 18
    FuncDeclaration_Repeat  go to state 19
    FuncDeclaration         go to state 20
    FuncHeading             go to state 21
    FuncIdent               go to state 22


state 12

    2 ProgHeading: PROGRAM IDToken '(' OUTPUT . ')'

    ')'  shift, and go to state 23


state 13

    4 VarPart: VAR VarDeclaration . ';' VarDeclarationSemic_Repeat

    ';'  shift, and go to state 24


state 14

    8 VarDeclaration: IDList . ':' IDToken

    ':'  shift, and go to state 25


state 15

    9 IDList: IDToken . CommaID_Repeat

    ','  shift, and go to state 26

    $default  reduce using rule 11 (CommaID_Repeat)

    CommaID_Repeat  go to state 27


state 16

    1 Prog: ProgHeading ';' ProgBlock '.' .

    $default  reduce using rule 1 (Prog)


state 17

   18 FuncHeading: FUNCTION . IDToken FormalParamList ':' IDToken
   19            | FUNCTION . IDToken ':' IDToken
   20 FuncIdent: FUNCTION . IDToken

    ID  shift, and go to state 4

    IDToken  go to state 28


state 18

    3 ProgBlock: VarPart FuncPart . StatPart

    BEGIN_token  shift, and go to state 29

    StatPart  go to state 30
    CompStat  go to state 31


state 19

   12 FuncPart: FuncDeclaration_Repeat .

    $default  reduce using rule 12 (FuncPart)


state 20

   13 FuncDeclaration_Repeat: FuncDeclaration . ';' FuncDeclaration_Repeat

    ';'  shift, and go to state 32


state 21

   15 FuncDeclaration: FuncHeading . ';' FORWARD
   17                | FuncHeading . ';' FuncBlock

    ';'  shift, and go to state 33


state 22

   16 FuncDeclaration: FuncIdent . ';' FuncBlock

    ';'  shift, and go to state 34


state 23

    2 ProgHeading: PROGRAM IDToken '(' OUTPUT ')' .

    $default  reduce using rule 2 (ProgHeading)


state 24

    4 VarPart: VAR VarDeclaration ';' . VarDeclarationSemic_Repeat

    ID  shift, and go to state 4

    $default  reduce using rule 7 (VarDeclarationSemic_Repeat)

    VarDeclarationSemic_Repeat  go to state 35
    VarDeclaration              go to state 36
    IDList                      go to state 14
    IDToken                     go to state 15


state 25

    8 VarDeclaration: IDList ':' . IDToken

    ID  shift, and go to state 4

    IDToken  go to state 37


state 26

   10 CommaID_Repeat: ',' . IDToken CommaID_Repeat

    ID  shift, and go to state 4

    IDToken  go to state 38


state 27

    9 IDList: IDToken CommaID_Repeat .

    $default  reduce using rule 9 (IDList)


state 28

   18 FuncHeading: FUNCTION IDToken . FormalParamList ':' IDToken
   19            | FUNCTION IDToken . ':' IDToken
   20 FuncIdent: FUNCTION IDToken .

    '('  shift, and go to state 39
    ':'  shift, and go to state 40

    $default  reduce using rule 20 (FuncIdent)

    FormalParamList  go to state 41


state 29

   28 CompStat: BEGIN_token . StatList END

    BEGIN_token  shift, and go to state 29
    IF           shift, and go to state 42
    REPEAT       shift, and go to state 43
    VAL          shift, and go to state 44
    WHILE        shift, and go to state 45
    WRITELN      shift, and go to state 46
    ID           shift, and go to state 4

    $default  reduce using rule 41 (IDAssignExpr_Optional)

    CompStat               go to state 47
    StatList               go to state 48
    Stat                   go to state 49
    IDAssignExpr_Optional  go to state 50
    IDToken                go to state 51


state 30

    3 ProgBlock: VarPart FuncPart StatPart .

    $default  reduce using rule 3 (ProgBlock)


state 31

   27 StatPart: CompStat .

    $default  reduce using rule 27 (StatPart)


state 32

   13 FuncDeclaration_Repeat: FuncDeclaration ';' . FuncDeclaration_Repeat

    FUNCTION  shift, and go to state 17

    $default  reduce using rule 14 (FuncDeclaration_Repeat)

    FuncDeclaration_Repeat  go to state 52
    FuncDeclaration         go to state 20
    FuncHeading             go to state 21
    FuncIdent               go to state 22


state 33

   15 FuncDeclaration: FuncHeading ';' . FORWARD
   17                | FuncHeading ';' . FuncBlock

    FORWARD  shift, and go to state 53
    VAR      shift, and go to state 9

    $default  reduce using rule 5 (VarPart)

    VarPart    go to state 54
    FuncBlock  go to state 55


state 34

   16 FuncDeclaration: FuncIdent ';' . FuncBlock

    VAR  shift, and go to state 9

    $default  reduce using rule 5 (VarPart)

    VarPart    go to state 54
    FuncBlock  go to state 56


state 35

    4 VarPart: VAR VarDeclaration ';' VarDeclarationSemic_Repeat .

    $default  reduce using rule 4 (VarPart)


state 36

    6 VarDeclarationSemic_Repeat: VarDeclaration . ';' VarDeclarationSemic_Repeat

    ';'  shift, and go to state 57


state 37

    8 VarDeclaration: IDList ':' IDToken .

    $default  reduce using rule 8 (VarDeclaration)


state 38

   10 CommaID_Repeat: ',' IDToken . CommaID_Repeat

    ','  shift, and go to state 26

    $default  reduce using rule 11 (CommaID_Repeat)

    CommaID_Repeat  go to state 58


state 39

   21 FormalParamList: '(' . FormalParams SemicFormalParams_Repeat ')'

    VAR  shift, and go to state 59
    ID   shift, and go to state 4

    IDList        go to state 60
    FormalParams  go to state 61
    IDToken       go to state 15


state 40

   19 FuncHeading: FUNCTION IDToken ':' . IDToken

    ID  shift, and go to state 4

    IDToken  go to state 62


state 41

   18 FuncHeading: FUNCTION IDToken FormalParamList . ':' IDToken

    ':'  shift, and go to state 63


state 42

   33 Stat: IF . Expr THEN Stat ELSE Stat
   34     | IF . Expr THEN Stat

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    OP3      shift, and go to state 67
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Expr           go to state 70
    SimpleExpr     go to state 71
    Term           go to state 72
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78
    UnaryOP3Token  go to state 79


state 43

   36 Stat: REPEAT . StatList UNTIL Expr

    BEGIN_token  shift, and go to state 29
    IF           shift, and go to state 42
    REPEAT       shift, and go to state 43
    VAL          shift, and go to state 44
    WHILE        shift, and go to state 45
    WRITELN      shift, and go to state 46
    ID           shift, and go to state 4

    $default  reduce using rule 41 (IDAssignExpr_Optional)

    CompStat               go to state 47
    StatList               go to state 80
    Stat                   go to state 49
    IDAssignExpr_Optional  go to state 50
    IDToken                go to state 51


state 44

   37 Stat: VAL . '(' PARAMSTR '(' Expr ')' ',' IDToken ')'

    '('  shift, and go to state 81


state 45

   35 Stat: WHILE . Expr DO Stat

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    OP3      shift, and go to state 67
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Expr           go to state 82
    SimpleExpr     go to state 71
    Term           go to state 72
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78
    UnaryOP3Token  go to state 79


state 46

   39 Stat: WRITELN . WritelnPList_Optional

    '('  shift, and go to state 83

    $default  reduce using rule 43 (WritelnPList_Optional)

    WritelnPList_Optional  go to state 84
    WritelnPList           go to state 85


state 47

   32 Stat: CompStat .

    $default  reduce using rule 32 (Stat)


state 48

   28 CompStat: BEGIN_token StatList . END

    END  shift, and go to state 86


state 49

   29 StatList: Stat . SemicStat_Repeat

    ';'  shift, and go to state 87

    $default  reduce using rule 31 (SemicStat_Repeat)

    SemicStat_Repeat  go to state 88


state 50

   38 Stat: IDAssignExpr_Optional .

    $default  reduce using rule 38 (Stat)


state 51

   40 IDAssignExpr_Optional: IDToken . ASSIGN Expr

    ASSIGN  shift, and go to state 89


state 52

   13 FuncDeclaration_Repeat: FuncDeclaration ';' FuncDeclaration_Repeat .

    $default  reduce using rule 13 (FuncDeclaration_Repeat)


state 53

   15 FuncDeclaration: FuncHeading ';' FORWARD .

    $default  reduce using rule 15 (FuncDeclaration)


state 54

   26 FuncBlock: VarPart . StatPart

    BEGIN_token  shift, and go to state 29

    StatPart  go to state 90
    CompStat  go to state 31


state 55

   17 FuncDeclaration: FuncHeading ';' FuncBlock .

    $default  reduce using rule 17 (FuncDeclaration)


state 56

   16 FuncDeclaration: FuncIdent ';' FuncBlock .

    $default  reduce using rule 16 (FuncDeclaration)


state 57

    6 VarDeclarationSemic_Repeat: VarDeclaration ';' . VarDeclarationSemic_Repeat

    ID  shift, and go to state 4

    $default  reduce using rule 7 (VarDeclarationSemic_Repeat)

    VarDeclarationSemic_Repeat  go to state 91
    VarDeclaration              go to state 36
    IDList                      go to state 14
    IDToken                     go to state 15


state 58

   10 CommaID_Repeat: ',' IDToken CommaID_Repeat .

    $default  reduce using rule 10 (CommaID_Repeat)


state 59

   24 FormalParams: VAR . IDList ':' IDToken

    ID  shift, and go to state 4

    IDList   go to state 92
    IDToken  go to state 15


state 60

   25 FormalParams: IDList . ':' IDToken

    ':'  shift, and go to state 93


state 61

   21 FormalParamList: '(' FormalParams . SemicFormalParams_Repeat ')'

    ';'  shift, and go to state 94

    $default  reduce using rule 23 (SemicFormalParams_Repeat)

    SemicFormalParams_Repeat  go to state 95


state 62

   19 FuncHeading: FUNCTION IDToken ':' IDToken .

    $default  reduce using rule 19 (FuncHeading)


state 63

   18 FuncHeading: FUNCTION IDToken FormalParamList ':' . IDToken

    ID  shift, and go to state 4

    IDToken  go to state 96


state 64

   67 IDToken: ID .
   71 IDCallToken: ID .

    '('       reduce using rule 71 (IDCallToken)
    $default  reduce using rule 67 (IDToken)


state 65

   69 RealLitToken: REALLIT .

    $default  reduce using rule 69 (RealLitToken)


state 66

   70 IntLitToken: INTLIT .

    $default  reduce using rule 70 (IntLitToken)


state 67

   78 UnaryOP3Token: OP3 .

    $default  reduce using rule 78 (UnaryOP3Token)


state 68

   77 UnaryNOTToken: NOT .

    $default  reduce using rule 77 (UnaryNOTToken)


state 69

   59 Factor: '(' . Expr ')'

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    OP3      shift, and go to state 67
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Expr           go to state 97
    SimpleExpr     go to state 71
    Term           go to state 72
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78
    UnaryOP3Token  go to state 79


state 70

   33 Stat: IF Expr . THEN Stat ELSE Stat
   34     | IF Expr . THEN Stat

    THEN  shift, and go to state 98


state 71

   49 Expr: SimpleExpr .
   50     | SimpleExpr . OP2Token SimpleExpr
   51 SimpleExpr: SimpleExpr . OP3Token Term
   52           | SimpleExpr . ORToken Term

    OP2  shift, and go to state 99
    OR   shift, and go to state 100
    OP3  shift, and go to state 101

    $default  reduce using rule 49 (Expr)

    ORToken   go to state 102
    OP3Token  go to state 103
    OP2Token  go to state 104


state 72

   54 SimpleExpr: Term .
   55 Term: Term . OP4Token Term
   56     | Term . ANDToken Term

    AND  shift, and go to state 105
    OP4  shift, and go to state 106

    $default  reduce using rule 54 (SimpleExpr)

    ANDToken  go to state 107
    OP4Token  go to state 108


state 73

   57 Term: Factor .

    $default  reduce using rule 57 (Term)


state 74

   63 Factor: IDToken .

    $default  reduce using rule 63 (Factor)


state 75

   61 Factor: RealLitToken .

    $default  reduce using rule 61 (Factor)


state 76

   60 Factor: IntLitToken .

    $default  reduce using rule 60 (Factor)


state 77

   62 Factor: IDCallToken . ParamList

    '('  shift, and go to state 109

    ParamList  go to state 110


state 78

   58 Factor: UnaryNOTToken . Factor

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Factor         go to state 111
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78


state 79

   53 SimpleExpr: UnaryOP3Token . Term

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Term           go to state 112
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78


state 80

   36 Stat: REPEAT StatList . UNTIL Expr

    UNTIL  shift, and go to state 113


state 81

   37 Stat: VAL '(' . PARAMSTR '(' Expr ')' ',' IDToken ')'

    PARAMSTR  shift, and go to state 114


state 82

   35 Stat: WHILE Expr . DO Stat

    DO  shift, and go to state 115


state 83

   44 WritelnPList: '(' . Expr CommaExprString_Repeat ')'
   45             | '(' . StringToken CommaExprString_Repeat ')'

    ID       shift, and go to state 64
    STRING   shift, and go to state 116
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    OP3      shift, and go to state 67
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Expr           go to state 117
    SimpleExpr     go to state 71
    Term           go to state 72
    Factor         go to state 73
    IDToken        go to state 74
    StringToken    go to state 118
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78
    UnaryOP3Token  go to state 79


state 84

   39 Stat: WRITELN WritelnPList_Optional .

    $default  reduce using rule 39 (Stat)


state 85

   42 WritelnPList_Optional: WritelnPList .

    $default  reduce using rule 42 (WritelnPList_Optional)


state 86

   28 CompStat: BEGIN_token StatList END .

    $default  reduce using rule 28 (CompStat)


state 87

   30 SemicStat_Repeat: ';' . Stat SemicStat_Repeat

    BEGIN_token  shift, and go to state 29
    IF           shift, and go to state 42
    REPEAT       shift, and go to state 43
    VAL          shift, and go to state 44
    WHILE        shift, and go to state 45
    WRITELN      shift, and go to state 46
    ID           shift, and go to state 4

    $default  reduce using rule 41 (IDAssignExpr_Optional)

    CompStat               go to state 47
    Stat                   go to state 119
    IDAssignExpr_Optional  go to state 50
    IDToken                go to state 51


state 88

   29 StatList: Stat SemicStat_Repeat .

    $default  reduce using rule 29 (StatList)


state 89

   40 IDAssignExpr_Optional: IDToken ASSIGN . Expr

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    OP3      shift, and go to state 67
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Expr           go to state 120
    SimpleExpr     go to state 71
    Term           go to state 72
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78
    UnaryOP3Token  go to state 79


state 90

   26 FuncBlock: VarPart StatPart .

    $default  reduce using rule 26 (FuncBlock)


state 91

    6 VarDeclarationSemic_Repeat: VarDeclaration ';' VarDeclarationSemic_Repeat .

    $default  reduce using rule 6 (VarDeclarationSemic_Repeat)


state 92

   24 FormalParams: VAR IDList . ':' IDToken

    ':'  shift, and go to state 121


state 93

   25 FormalParams: IDList ':' . IDToken

    ID  shift, and go to state 4

    IDToken  go to state 122


state 94

   22 SemicFormalParams_Repeat: ';' . FormalParams SemicFormalParams_Repeat

    VAR  shift, and go to state 59
    ID   shift, and go to state 4

    IDList        go to state 60
    FormalParams  go to state 123
    IDToken       go to state 15


state 95

   21 FormalParamList: '(' FormalParams SemicFormalParams_Repeat . ')'

    ')'  shift, and go to state 124


state 96

   18 FuncHeading: FUNCTION IDToken FormalParamList ':' IDToken .

    $default  reduce using rule 18 (FuncHeading)


state 97

   59 Factor: '(' Expr . ')'

    ')'  shift, and go to state 125


state 98

   33 Stat: IF Expr THEN . Stat ELSE Stat
   34     | IF Expr THEN . Stat

    BEGIN_token  shift, and go to state 29
    IF           shift, and go to state 42
    REPEAT       shift, and go to state 43
    VAL          shift, and go to state 44
    WHILE        shift, and go to state 45
    WRITELN      shift, and go to state 46
    ID           shift, and go to state 4

    $default  reduce using rule 41 (IDAssignExpr_Optional)

    CompStat               go to state 47
    Stat                   go to state 126
    IDAssignExpr_Optional  go to state 50
    IDToken                go to state 51


state 99

   76 OP2Token: OP2 .

    $default  reduce using rule 76 (OP2Token)


state 100

   74 ORToken: OR .

    $default  reduce using rule 74 (ORToken)


state 101

   75 OP3Token: OP3 .

    $default  reduce using rule 75 (OP3Token)


state 102

   52 SimpleExpr: SimpleExpr ORToken . Term

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Term           go to state 127
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78


state 103

   51 SimpleExpr: SimpleExpr OP3Token . Term

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Term           go to state 128
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78


state 104

   50 Expr: SimpleExpr OP2Token . SimpleExpr

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    OP3      shift, and go to state 67
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    SimpleExpr     go to state 129
    Term           go to state 72
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78
    UnaryOP3Token  go to state 79


state 105

   72 ANDToken: AND .

    $default  reduce using rule 72 (ANDToken)


state 106

   73 OP4Token: OP4 .

    $default  reduce using rule 73 (OP4Token)


state 107

   56 Term: Term ANDToken . Term

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Term           go to state 130
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78


state 108

   55 Term: Term OP4Token . Term

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Term           go to state 131
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78


state 109

   64 ParamList: '(' . Expr CommaExpr_Repeat ')'

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    OP3      shift, and go to state 67
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Expr           go to state 132
    SimpleExpr     go to state 71
    Term           go to state 72
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78
    UnaryOP3Token  go to state 79


state 110

   62 Factor: IDCallToken ParamList .

    $default  reduce using rule 62 (Factor)


state 111

   58 Factor: UnaryNOTToken Factor .

    $default  reduce using rule 58 (Factor)


state 112

   53 SimpleExpr: UnaryOP3Token Term .
   55 Term: Term . OP4Token Term
   56     | Term . ANDToken Term

    AND  shift, and go to state 105
    OP4  shift, and go to state 106

    $default  reduce using rule 53 (SimpleExpr)

    ANDToken  go to state 107
    OP4Token  go to state 108


state 113

   36 Stat: REPEAT StatList UNTIL . Expr

    ID       shift, and go to state 64
    REALLIT  shift, and go to state 65
    INTLIT   shift, and go to state 66
    OP3      shift, and go to state 67
    NOT      shift, and go to state 68
    '('      shift, and go to state 69

    Expr           go to state 133
    SimpleExpr     go to state 71
    Term           go to state 72
    Factor         go to state 73
    IDToken        go to state 74
    RealLitToken   go to state 75
    IntLitToken    go to state 76
    IDCallToken    go to state 77
    UnaryNOTToken  go to state 78
    UnaryOP3Token  go to state 79


state 114

   37 Stat: VAL '(' PARAMSTR . '(' Expr ')' ',' IDToken ')'

    '('  shift, and go to state 134


state 115

   35 Stat: WHILE Expr DO . Stat

    BEGIN_token  shift, and go to state 29
    IF           shift, and go to state 42
    REPEAT       shift, and go to state 43
    VAL          shift, and go to state 44
    WHILE        shift, and go to state 45
    WRITELN      shift, and go to state 46
    ID           shift, and go to state 4

    $default  reduce using rule 41 (IDAssignExpr_Optional)

    CompStat               go to state 47
    Stat                   go to state 135
    IDAssignExpr_Optional  go to state 50
    IDToken                go to state 51


state 116

   68 StringToken: STRING .

    $default  reduce using rule 68 (StringToken)


state 117

   44 WritelnPList: '(' Expr . CommaExprString_Repeat ')'

    ','  shift, and go to state 136

    $default  reduce using rule 48 (CommaExprString_Repeat)

    CommaExprString_Repeat  go to state 137


state 118

   45 WritelnPList: '(' StringToken . CommaExprString_Repeat ')'

    ','  shift, and go to state 136

    $default  reduce using rule 48 (CommaExprString_Repeat)

    CommaExprString_Repeat  go to state 138


state 119

   30 SemicStat_Repeat: ';' Stat . SemicStat_Repeat

    ';'  shift, and go to state 87

    $default  reduce using rule 31 (SemicStat_Repeat)

    SemicStat_Repeat  go to state 139


state 120

   40 IDAssignExpr_Optional: IDToken ASSIGN Expr .

    $default  reduce using rule 40 (IDAssignExpr_Optional)


state 121

   24 FormalParams: VAR IDList ':' . IDToken

    ID  shift, and go to state 4

    IDToken  go to state 140


state 122

   25 FormalParams: IDList ':' IDToken .

    $default  reduce using rule 25 (FormalParams)


state 123

   22 SemicFormalParams_Repeat: ';' FormalParams . SemicFormalParams_Repeat

    ';'  shift, and go to state 94

    $default  reduce using rule 23 (SemicFormalParams_Repeat)

    SemicFormalParams_Repeat  go to state 141


state 124
